# beifan

./: .pdm-python  db.sqlite3  manage.py  pyproject.toml  result.html  submit.html
beifan/: asgi.py  settings.py  urls.py  wsgi.py
first_app/: urls.py  views.py
